--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "signal.h": "c",
         "pthread.h": "c",
         "semaphore.h": "c",
-        "fcntl.h": "c"
+        "fcntl.h": "c",
+        "commons.h": "c"
     }
 }
